--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "lisense": "NOLICENSE",
   "private": true,
   "scripts": {
     "lint": "run-p lint:*",
@@ -10,6 +11,8 @@
     "fix:prettier": "prettier '**/*.{json,md}' --ignore-path .gitignore --write",
     "fix:eslint": "yarn lint:eslint --fix",
     "dev": "next dev",
+    "prebuild": "run-p prebuild:*",
+    "prebuild:contract": "cd ../contracts && yarn && yarn build && cd ../frontend",
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -s ./public -p 6006",
