fix package json

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -12,9 +12,9 @@
     "fix:prettier": "prettier '**/*.{json,md,sol}' --ignore-path .gitignore --write",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:sol": "yarn lint:sol --fix",
-    "test": "yarn hardhat test",
-    "coverage": "yarn hardhat coverage",
-    "build": "yarn hardhat compile"
+    "test": "hardhat test",
+    "coverage": "hardhat coverage",
+    "build": "hardhat compile"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.2",
