--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,18 +20,18 @@
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
     "ethers": "^5.6.9",
     "framer-motion": "^6",
+    "google-map-react": "^2.2.0",
     "next": "12.2.4",
-    "next-transpile-modules": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "recoil": "^0.7.5",
-    "wagmi": "^0.6.1",
-    "wrld-react": "^1.0.0"
+    "wagmi": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -44,6 +44,8 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@types/google-map-react": "^2.1.7",
+    "@types/google.maps": "^3.49.2",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
