--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^5.9.3",
     "axios": "^0.27.2",
     "ethers": "^5.6.9",
+    "file-saver": "^2.0.5",
     "framer-motion": "^6",
     "google-map-react": "^2.2.0",
     "next": "12.2.4",
@@ -34,6 +35,7 @@
     "react-webcam": "^7.0.1",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.5",
+    "three": "^0.143.0",
     "wagmi": "^0.6.1"
   },
   "devDependencies": {
@@ -47,11 +49,13 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@types/file-saver": "^2.0.5",
     "@types/google-map-react": "^2.1.7",
     "@types/google.maps": "^3.49.2",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/three": "^0.143.1",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "eslint": "8.21.0",
