--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "ethers-multicall": "^0.2.3",
     "express": "^4.18.1",
     "nft.storage": "^7.0.0"
   },
