--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -21,6 +21,7 @@
     "@vendia/serverless-express",
     "cors",
     "ethers",
+    "ethers-multicall",
     "express"
   ],
   "dependencies": {
@@ -31,8 +32,7 @@
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "ethers-multicall": "^0.2.3",
-    "express": "^4.18.1",
-    "nft.storage": "^7.0.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.102",
